# Telemedicine-Triage-Scheduling-Engine

./: .gitignore  README.md  arhitecture.md
telemedicina_platform/: docker-compose.yml
telemedicina_platform/frontend_telemedicina/: package-lock.json  package.json
telemedicina_platform/init-scripts/: 001-core.sql  002-patients-schema.sql  003-patients-logic.sql  016-seed-script.sql  (+12 more)
telemedicina_platform/telemed_api/: Cargo.toml
telemedicina_platform/telemed_api/src/: core.rs  features.rs  main.rs
telemedicina_platform/telemed_api/src/core/: config.rs  db.rs  router.rs
telemedicina_platform/telemed_api/src/features/: appointments.rs  auth.rs  consultations.rs  diseases.rs  doctors.rs  history.rs  patients.rs  subscriptions.rs  triage.rs
telemedicina_platform/telemed_api/src/features/appointments/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/features/auth/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/features/consultations/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/features/diseases/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/features/doctors/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/features/history/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/features/patients/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/features/subscriptions/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/features/triage/: db.rs  dto.rs  handler.rs
telemedicina_platform/telemed_api/src/middleware/: auth.rs
(+20 files in other folders)
