[package]
name = "telemed_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
password-hash = "0.5"
dotenvy = "0.15"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tower-http = { version = "0.6.10", features = ["cors"] }
